src/objects/Flow_Data__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flow</label>
        <referenceTo>Flow__c</referenceTo>
        <relationshipName>Flow_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Lead__c</fullName>
        <formula>Lead__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>Lead__r.FirstName&amp;&quot; &quot;&amp;Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Flow_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageData__c</fullName>
        <description>Page Data</description>
        <label>PageData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>IF(CONTAINS(Flow__r.Community_URL__c, &apos;/s/&apos;), 
Flow__r.Community_URL__c&amp;&quot;?fid=&quot;&amp;Code__c,
Flow__r.Community_URL__c&amp;&quot;/s/?fid=&quot;&amp;Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Questionnaire Data</label>
    <nameField>
        <displayFormat>FLD-{0000}</displayFormat>
        <label>Questionnaire Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>